# home-camera

./: .env.sample  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-and-push.yaml
k8s/: configmap-ref.yaml  cronjob.yaml  secret.example.yaml
src/: config.rs  error.rs  h264_depacketizer.rs  key.rs  lib.rs  main.rs  mp4_recorder.rs  recorder.rs  retry.rs  slack_client.rs  sps.rs  storage.rs
tests/: config_prop.rs  key_prop.rs  retry_prop.rs
