[package]
name = "home-camera"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
aws-types = "1"
base64 = "0.22"
shiguredo_http11 = "2026.1.0-canary.9"
shiguredo_mp4 = "2026.2.0-canary.3"
shiguredo_rtsp = "2026.1.0-canary.0"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
proptest = "1"
