[package]
name = "home-camera"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
aws-types = "1"
shiguredo_http11 = "2026.1.0-canary.9"
shiguredo_rtsp = "2026.1.0-canary.0"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1"
